<resources>
    <string name="app_name">Tour guide Application</string>
    <string name="tab_text_1">Touristic</string>
    <string name="tab_text_2">Shopping</string>
    <string name="tab_text_3">Food</string>
    <string name="tab_text_4">Hotels</string>
    <string name="address">Address</string>
    <string name="disc">Description</string>
    <string name="n1TouristicName">المتحف المصري</string>
    <string name="n1TouristicDisc">المتحف المصري هو أحد أكبر وأشهر المتاحف العالمية، يقع في قلب العاصمة المصرية "القاهرة" بالجهة الشمالية لميدان التحرير. يعود تاريخ إنشائه إلى عام 1835 وكان موقعه حينها بحديقة الأزبكية، حيث ضم وقتها عدداً كبيراً من الآثار المتنوعة، ثم نقل بمحتوياته إلى قاعة العرض الثانية بقلعة صلاح الدين، حتى فكر عالم المصريات الفرنسي أوجوست مارييت الذي كان يعمل بمتحف اللوفر في افتتاح متحفٍ يعرض فيه مجموعة من الآثار على شاطئ النيل عند بولاق، وعندما تعرضت هذه الآثار لخطر الفيضان تم نقلها إلى ملحق خاص بقصر الخديوي إسماعيل بالجيزة، ثم جاء عالم المصريات جاستون ماسبيرو وافتتح عام 1902 في عهد الخديوي عباس حلمي الثاني مبنى المتحف الجديد في موقعه الحالي في قلب القاهرة. يعتبر المتحف المصري من أوائل المتاحف في العالم التي أسست لتكون متحف عام على عكس المتاحف التي سبقته، يضم المتحف أكثر من 180 ألف قطعة أثرية أهمها المجموعات الأثرية التي عثر عليها في مقابر الملوك والحاشية الملكية للأسرة الوسطى في دهشور عام 1894، ويضم المتحف الآن أعظم مجموعة أثرية في العالم تعبر عن جميع مراحل التاريخ المصري القديم.</string>
    <string name="n1TouristicAd">‏ميدان التحرير، القاهرة، مصر</string>
    <string name="n2TouristicName">وادي الملوك</string>
    <string name="n2TouristicDisc">وادي الملوك ويعرف أيضا باسم "وادي بيبان الملوك"، هو واد في مصر استخدم على مدار 500 سنة خلال الفترة ما بين القرنين السادس عشر والحادي عشر قبل الميلاد لتشييد مقابر لفراعنة ونبلاء الدولة الحديثة الممتدة خلال عصور الآسرات الثامنة عشر وحتى الأسرة العشرين بمصر القديمة، ويقع الوادي على الضفة الغربية لنهر النيل في مواجهة طيبة بقلب مدينة طيبة الجنائزية القديمة. وينقسم وادي الملوك إلى واديين؛ الوادي الشرقي والوادي الغربي. وباكتشاف حجرة الدفن الأخيرة عام 2006 والمعروفة باسم علاوة على اكتشاف مدخلين آخرين لنفس الحجرة خلال عام 2008، وصل عدد المقابر المكتشفة حتى الآن إلى 63 مقبرة متفاوتة الأحجام إذ تتراوح ما بين حفرة صغيرة في الأرض وحتى مقبرة معقدة التركيب تحوي أكثر من 120 حجرة دفن بداخلها. استخدمت هذه المقابر جميعها في دفن ملوك وأمراء الدولة الحديثة بمصر القديمة بالإضافة إلى بعض النبلاء ومن كان على علاقة بالأسرة الحاكمة في ذلك الوقت. وتتميز المقابر الملكية باحتوائها على رسومات ونقوش من الميثولوجيا المصرية القديمة توضح العقائد الدينية والمراسم التأبينية في ذلك الوقت. وجميع القبور المكتشفة قد تم فتحها ونهبها في العصور القديمة وعلى الرغم من ذلك بقت دليلا دامغا على قوة ورخاء ملوك ذلك الزمان.</string>
    <string name="n2TouristicAd">يقع الوادي على الضفة الغربية لنهر النيل في مواجهة طيبة (الأقصر حاليا)</string>
    <string name="n3TouristicName">أهرامات الجيزة</string>
    <string name="n3TouristicDisc">مجمع أهرامات الجيزة هو موقع أثري على هضبة الجيزة، على مشارف القاهرة، مصر. ويشمل الأهرامات الثلاثة الكبرى، وأبو الهول العظيم، وعدة مقابر، وقرية عمالية ومجمع صناعي. يقع في الصحراء الغربية، على بعد حوالي 9 كم غرب نهر النيل في البلدة القديمة في الجيزة، وحوالي 13 كم جنوب غرب مركز مدينة القاهرة. الأهرامات، التي كانت شائعة تاريخياً كرموز لمصر القديمة في الخيال الغربي، شاعت في الأزمنة الهلنستية، عندما تم ذكر الهرم الأكبر من قبل أنتيباتر الصيداي كأحد عجائب الدنيا السبع في العالم. وهو حتى الآن أقدم عجائب الدنيا والوحيد الذي لا يزال موجودًا.</string>
    <string name="n3TouristicAd">الهرم، الجيزة</string>
    <string name="n4TouristicName">الكرنك</string>
    <string name="n4TouristicDisc">الكرنك أو مجمع معابد الكرنك الذي يُشتهر باسم معبد الكرنك هو مجموعة من المعابد والبنايات والأعمدة، حيث استمرت عمليات التوسع والبناء منذ العصر الفرعونى وتحديدا ملوك الدولة الوسطي حتى العصر الرومانى في الأقصر في مصر على الشط الشرقى. المعبد بُنى للثالوث الإلهى أمون، زوجته الالهة موت وابنهم الاله خونسو؛ ولكل منهم معبد تابع لمجمع معابد الكرنك. أحياناً يعنى السياح والغير متخصصين بمعبد الكرنك فقط المعبد تابع لأمون آى أمون رع.</string>
    <string name="n4TouristicAd">الكرنك، الاقصر</string>
    <string name="n5TouristicName">معبد الاقصر</string>
    <string name="n5TouristicDisc">معبد الأقصر معبد كبير من المعابد المصرية القديمة المعقدة يقع على الضفة الشرقية لنهر النيل في مدينة الأقصر اليوم المعروفة باسم. تأسس سنة 1400 قبل الميلاد. شُيد معبد الأقصر لعبادة آمون رع وزوجته موت وابنهما خونسو؛ وهي الآرباب التي يطلق عليها أيضا لقب الثالوث الطيبي. تم تشييد معبد الأقصر في عهد ملوك الأسرة الثامنة عشر، والأسرة التاسعة عشرة. وأهم الأبنية القائمة بالمعبد هي تلك التي شيدها الملكان أمنحوتب الثالث ورمسيس الثاني. كما أقام الملك تحتمس الثالث مقاصير لزوار ثالوث طيبة المقدس، كما قام توت عنخ آمون باستكمال نقوش جدرانه. وقد دمرت المقصورة الثلاثية التي كانت قد شيدت من قبل في عهد الملكة حتشبسوت والملك تحتمس الثالث ؛ ثم أعيد بناؤها في عهد الملك رمسيس الثاني. سمي المعبد أيضاً "إيبت رسيت". وهو من أحسن المعابد المصرية حفظاً وأجملها بناء، وفيه يتجلى تخطيط المعبد المصري أوضح ما يكون.</string>
    <string name="n5TouristicAd"> مدينة الأقصر</string>
    <string name="n6TouristicName">فيلة</string>
    <string name="n6TouristicDisc">جزيرة فيلة، هي جزيرة في منتصف نهر النيل وهي إحدى الحصون الأقوى على طول حدود مصر الجنوبية، وتفصل النيل إلى قناتين معاكستين في أسوان، كان بها معبد فيلة وانتقل من مكانه الأصلي على جزيرة فيلة وتم تجميعه على جزيرة أجيليكا، وذلك في أعقاب بناء السد العالي. ويرجع اسم فيلة أو فيلاي إلى اللغة الإغريقية التي تعني أو أما الاسم العربي لها فهو أنس الوجود نسبة لأسطورة أنس الموجودة في قصص ألف ليلة وليلة أما الاسم المصري القديم والقبطي فهو بيلاك أو بيلاخ ويعني الحد أو النهاية لأنها كانت آخر حدود مصر في الجنوب. ومجموعة العبادة كرست لعبادة الإلهة إيزيس غير أن الجزيرة احتوت على معابد لحتحور وأمنحتب وغيرها من المعابد.</string>
    <string name="n6TouristicAd"> في منتصف نهر النيل</string>
    <string name="n1ShoppingName">Khan Al Khalili</string>
    <string name="n1ShoppingDisc">This market in the interiors of the old Cairo city is centuries old and is a must-visit for all those who have a bug for shopping. Even if you’re not someone who is into shopping, you can just roam around this market to experience the hustle and bustle of this spectacular Arab city. Keep your pockets filled with cash and learn well to haggle beforehand, as that skill comes very handy at this place. Probably the best place in the entire city to buy novelty T-shirts, little bottles of colored sand having pictures of camels, as well as, the amazing souvenirs with your name printed in hieroglyphics, an ancient Egyptian writing.</string>
    <string name="n1ShoppingAd">Al-Azhar Street, Cairo , Egypt</string>
    <string name="n2ShoppingName">Souk Al Fustat</string>
    <string name="n2ShoppingDisc">Situated just outside the northern entrance to Coptic Cairo, the Souk al Fustat is a fascinating little shopping mall that aims at the clear sighted foreign buyers. Do not miss checking out the beautiful handmade copies of Fatimid as well as Mamluke lamps that are sold here by Hassan and Mohamed. Although the prices here are fixed and no amount of bargaining skills can help you, the items available here are also worth your money. You’ll find everything from wonderful bedouin work on pillowcases, colorful metal cups, woodwork, paintings, traditional, bowls, trays, ceramic products, etc. This adds this market to the list of mystery shopping in Egyptas one gets extremely confused about where to spend their bucks. It is a great place to visit, also because you can dive deep into the interiors of the old Cairo as also pay a visit to the hanging church situated next to the souk.</string>
    <string name="n2ShoppingAd"> Corner el Emam Street and Hassan al Anwar Street | Old Cairo, Cairo, Egypt</string>
    <string name="n3ShoppingName">Aswan Souk</string>
    <string name="n3ShoppingDisc">This beautiful outdoor market is one of the important places of Aswan, southernmost city of Egypt. And although the city is growing day by day, receiving more and more tourists, this Souk retains all the features and characteristics of a millennia-old crossroads between Africa and the Mediterranean world on its trading routes. One can get good quality spices for very reasonable prices here.</string>
    <string name="n3ShoppingAd"> Aswan, Egypt</string>
    <string name="n4ShoppingName">Old Market</string>
    <string name="n4ShoppingDisc">The best place in Sharm for souvenirs as well as shopping in Egypt , the market boasts of plenty of juice and fruit shops. Also, one can buy things like spices, oils, t-shirts or even small pyramids for keepsakes. Also, there is an extremely beautiful Mosque here which is a must-visit while strolling through the roads of the Old Market. The prices here can be a bit on the higher side, but they are negotiable and one can bargain here. The market also offers plenty of options to eat with many restaurants and shisha lounges.</string>
    <string name="n4ShoppingAd">Sharm El Sheikh, Egypt</string>
    <string name="n5ShoppingName">Souk-Al-Gamaal</string>
    <string name="n5ShoppingDisc">Souk-al-Gamaal or the Birqash Camel Market is a fascinating market in Cairo where one can buy camels for meat, racing or for farming. One of the most horrible sights here is that of the camels who are tied to a rope to keep them from running away, while also being hit with a stick in order to herd them in a specific direction. One can take pictures of the camels here but only after you have paid up for taking your camera inside the market with you.</string>
    <string name="n5ShoppingAd">Barqash, Imbaba, Cairo, Egypt</string>
    <string name="n6ShoppingName">Sharia Khayamiya</string>
    <string name="n6ShoppingDisc">Located in the Cairo, this market is an amazing place for a stroll as it houses very unique and interesting items. The vendors here are very friendly and kind, unlike most of the vendors in Egypt who irritate you by asking you to buy something from their shop. There are many carpets and shawls on offer, as well as mini-sized tents that serve as play house for the kids here. The materials available here are used for several occasions like weddings.</string>
    <string name="n6ShoppingAd">Islamic Cairo, Cairo, Egypt</string>
    <string name="n7ShoppingName">Suuq El Ataba</string>
    <string name="n7ShoppingDisc">This amazing market in Cairo has a lot to offer with many options for its visitors. Various types of jewellery, accessories, clothes, antiques, handmade crafts, etc are available here so there’s at least something for everyone who visits here, making it a must-visit for everyone visiting the beautiful country of Egypt. The atmosphere here is brilliant and one can easily mix with the locals here and share your life experiences too as they are very welcoming which makes it the best place to shop in Egypt. With the prices being very reasonable, there is no need to bargain as you are already getting all the items for the least amount of money. Thus, the market boasts of being one of Egypt’s cheapest markets.</string>
    <string name="n7ShoppingAd">Cairo, Egypt</string>
    <string name="n8ShoppingName">Luxor Bazaar</string>
    <string name="n1foodName">Sequoia</string>
    <string name="n1foodDisc">The great vibes and stunning view of this place is still unmatched anywhere else in the city. You’re basically surrounded by the Nile from all angles. Their menu is very diverse and they serve alcoholic beverages and shisha. What more could you ask for?</string>
    <string name="n1foodAd">Zamalek, Cairo, Egypt</string>
</resources>